fixed _layouts folder name

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,18 +12,20 @@
     }
 
     a, p, ul li, ol li, h1, h2, h3, h4, h5, h6 {
-        font-family: 'BCSans';
-        font-size: 0.5rem;
+        font-family: 'BCSans', sans-serif;
+        font-size: 1.2rem;
     }
 
     main {
         float: right;
         width: 75%;
+        min-height: 300px;
     }
 
     aside {
         float: left;
-        width: 30%;
+        width: 15%;
+        min-height: 300px;
     }
 </style>
 <div class="container">
