--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
     }
 
     a, p, ul li, ol li, h1, h2, h3, h4, h5, h6 {
-        font-family: 'BCSans', sans-serif;
+        font-family: 'BCSans';
         font-size: 1.2rem;
     }
 
