added plugins, fixed fonts folder path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <style>
     @font-face {
         font-family: "BCSans";
-        src: url("../font/BCSans-Regular.ttf");
+        src: url("../fonts/BCSans-Regular.ttf");
     }
 
     .container {
