--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,9 @@
         width: 15%;
         min-height: 300px;
     }
+
+    {% include search-lunr.html %}
+
 </style>
 <div class="container">
     <main>
